--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "laravel/framework": "^8.12",
         "laravel/nexmo-notification-channel": "^2.5",
         "laravel/tinker": "^2.5",
-        "nexmo/laravel": "^2.4"
+        "nexmo/laravel": "^2.4",
+        "vonage/client": "^2.3",
+        "vonage/client-core": "^2.3"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
